Add moAdd typing to TalkNet.
Signed-off-by: Stanislav Beliaev <stasbelyaev96@gmail.com>

--- a/tutorials/tts/Inference_ModelSelect.ipynb
+++ b/tutorials/tts/Inference_ModelSelect.ipynb
@@ -178,7 +178,8 @@
     "        override_conf = conf\n",
     "    elif spectrogram_generator == \"talknet\":\n",
     "        from nemo.collections.tts.models import TalkNetSpectModel\n",
-    "        return TalkNetSpectModel.from_pretrained_all(\"tts_en_talknet\", override_config_path=override_conf)\n",
+    "        pretrained_model = \"tts_en_talknet\"\n",
+    "        SpectrogramGenerator = TalkNetSpectModel\n",
     "    elif spectrogram_generator == \"fastpitch\":\n",
     "        from nemo.collections.tts.models import FastPitchModel\n",
     "        pretrained_model = \"tts_en_fastpitch\"\n",
